<resources>
    <string name="app_name">SCI-AppGeolocator</string>

    <string name="sci">SCI</string>
    <string name="locator">LOCATOR</string>
    <string name="service">SERVICE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Bienvenida">Bienvenida</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_toolbar">toolbar</string>

    <string name="action_settings">Configuración</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="about">Material Design App</string>
    <string name="action_about">About</string>
    <string name="website">desarrollador-android.com</string>
    <string name="github">GitHub: github.com/scidesarrollo</string>
    <string name="drawer_header_image">drawer header image</string>
    <string name="manage_account">Administrar Cuenta</string>
    <string name="add_account">Add  account</string>
    <string name="name">Yeisson Andres Merchan Lemus</string>
    <string name="email">yandres24@hotmail.com</string>
    <string name="help">Ayuda</string>
    <string name="Acciones">Acciones</string>
    <string name="acciones">Acciones</string>

    <string name="prompt_email">User </string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="plus_sign_out">Cerrar sesión Google+</string>
    <string name="plus_disconnect">Desconectando de Google+</string>
    <string name="error_invalid_email">El usuario es Incorrecto</string>
    <string name="error_invalid_password">La cantraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es Incorrecta</string>
    <string name="error_field_required">Este campo es Requerido.</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="notified">Notificacion</string>
    <string name="btnAlarmOFF">Desactivar</string>
    <string name="btnAlarmON">Activar</string>
    <string name="notify_string">Mostrar Notificacion</string>
</resources>
