<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/sci" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVBienvenidaSCI"
            android:textSize="48dp"
            android:textStyle="bold"
            android:layout_marginTop="160dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"
            android:textColor="#ff1068ff" />

        <TextView android:text="@string/locator" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVBienvenidaLocator"
            android:textSize="48dp"
            android:textStyle="bold"
            android:textColor="#ff050202"
            android:layout_alignTop="@+id/tVBienvenidaSCI"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/service" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVBienvenidaService"
            android:textSize="48dp"
            android:textStyle="bold"
            android:textColor="#ffffcf02"
            android:layout_above="@+id/pbInicial"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pbInicial"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/tVBienvenidaLocator"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</ScrollView>


</RelativeLayout>
